working on timer

--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
         </ul>
     </nav>
     <main class="main">
-        <p class="question">QUESTION</p>
-        <ol class="choices">
+        <h1 class="question">QUESTION</h1>
+        <button onclick="startTimer(10)" class="start">START</button>
+        <!-- <ol class="choices">
             <li class="choice">CHOICE</li>
             <li class="choice">CHOICE</li>
             <li class="choice">CHOICE</li>
             <li class="choice">CHOICE</li>
-        </ol>
+        </ol> -->
+        <section class="validation">
+            <p>VALIDATION</p>
+        </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
