--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <nav id="nav" class="nav">
         <ul>
             <li class="nav-item">Top Scores</li>
-            <li class="nav-item">Time Remaining: ##</li>
+            <li class="nav-item">Time Remaining: <span id="time-remaining">0</span></li>
         </ul>
     </nav>
     <main class="main">
         <h1 class="question">QUESTION</h1>
-        <button onclick="startTimer(10)" class="start">START</button>
+        <button onclick="startTimer(3)" class="start">START</button>
         <!-- <ol class="choices">
             <li class="choice">CHOICE</li>
             <li class="choice">CHOICE</li>
