got questions changing

--- a/index.html
+++ b/index.html
@@ -15,16 +15,42 @@
         </ul>
     </nav>
     <main class="main">
-        <h1 class="question">QUESTION</h1>
-        <button onclick="startTimer(3)" class="start">START</button>
-        <!-- <ol class="choices">
-            <li class="choice">CHOICE</li>
-            <li class="choice">CHOICE</li>
-            <li class="choice">CHOICE</li>
-            <li class="choice">CHOICE</li>
-        </ol> -->
-        <section class="validation">
-            <p>VALIDATION</p>
+        <h1 id="question">LET'S TAKE A QUIZ!</h1>
+            <button onclick="startTimer(10)" id="startButton"class="start">START</button>
+            <section id="content">
+            <ol id="question1">
+                <li class="choice choice1">Q1 CHOICE</li>
+                <li class="choice choice2">Q1 CHOICE</li>
+                <li class="choice choice3">Q1 CHOICE</li>
+                <li class="choice choice4">Q1 CHOICE</li>
+            </ol>
+            <ol id="question2">
+                <li class="choice choice1">Q2 CHOICE</li>
+                <li class="choice choice2">Q2 CHOICE</li>
+                <li class="choice choice3">Q2 CHOICE</li>
+                <li class="choice choice4">Q2 CHOICE</li>
+            </ol>
+            <ol id="question3">
+                <li class="choice choice1">Q3 CHOICE</li>
+                <li class="choice choice2">Q3 CHOICE</li>
+                <li class="choice choice3">Q3 CHOICE</li>
+                <li class="choice choice4">Q3 CHOICE</li>
+            </ol>
+            <ol id="question4">
+                <li class="choice choice1">Q4 CHOICE</li>
+                <li class="choice choice2">Q4 CHOICE</li>
+                <li class="choice choice3">Q4 CHOICE</li>
+                <li class="choice choice4">Q4 CHOICE</li>
+            </ol>
+            <ol id="question5">
+                <li class="choice choice1">Q5 CHOICE</li>
+                <li class="choice choice2">Q5 CHOICE</li>
+                <li class="choice choice3">Q5 CHOICE</li>
+                <li class="choice choice4">Q5 CHOICE</li>
+            </ol>
+            <section class="validation">
+                <p>VALIDATION</p>
+            </section>
         </section>
     </main>
     <script src="script.js"></script>
