got all questions going

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                 <li class="choice choice3">Q5 CHOICE</li>
                 <li class="choice choice4">Q5 CHOICE</li>
             </ol>
+            <ol id="score">
+                <li class="answer answer1">ANSWER1</li>
+                <li class="answer answer2">ANSWER2</li>
+                <li class="answer answer3">ANSWER3</li>
+                <li class="answer answer4">ANSWER4</li>
+                <li class="answer answer5">ANSWER5</li>
+            </ol>
             <section class="validation">
                 <p>VALIDATION</p>
             </section>
