--- a/index.html
+++ b/index.html
@@ -19,34 +19,34 @@
             <button onclick="startTimer(10)" id="startButton"class="start">START</button>
             <section id="content">
             <ol id="question1">
-                <li class="choice choice1">Q1 CHOICE</li>
-                <li class="choice choice2">Q1 CHOICE</li>
-                <li class="choice choice3">Q1 CHOICE</li>
-                <li class="choice choice4">Q1 CHOICE</li>
+                <li id="choice" class="choice choice1">Q1 WRONG</li>
+                <li id="choice" class="choice choice2">Q1 WRONG</li>
+                <li id="choice" class="choice choice3">Q1 RIGHT</li>
+                <li id="choice" class="choice choice4">Q1 WRONG</li>
             </ol>
             <ol id="question2">
-                <li class="choice choice1">Q2 CHOICE</li>
-                <li class="choice choice2">Q2 CHOICE</li>
-                <li class="choice choice3">Q2 CHOICE</li>
-                <li class="choice choice4">Q2 CHOICE</li>
+                <li id="choice" class="choice choice1">Q2 WRONG</li>
+                <li id="choice" class="choice choice2">Q2 RIGHT</li>
+                <li id="choice" class="choice choice3">Q2 WRONG</li>
+                <li id="choice" class="choice choice4">Q2 WRONG</li>
             </ol>
             <ol id="question3">
-                <li class="choice choice1">Q3 CHOICE</li>
-                <li class="choice choice2">Q3 CHOICE</li>
-                <li class="choice choice3">Q3 CHOICE</li>
-                <li class="choice choice4">Q3 CHOICE</li>
+                <li id="choice" class="choice choice1">Q3 WRONG</li>
+                <li id="choice" class="choice choice2">Q3 WRONG</li>
+                <li id="choice" class="choice choice3">Q3 WRONG</li>
+                <li id="choice" class="choice choice4">Q3 RIGHT</li>
             </ol>
             <ol id="question4">
-                <li class="choice choice1">Q4 CHOICE</li>
-                <li class="choice choice2">Q4 CHOICE</li>
-                <li class="choice choice3">Q4 CHOICE</li>
-                <li class="choice choice4">Q4 CHOICE</li>
+                <li id="choice" class="choice choice1">Q4 RIGHT</li>
+                <li id="choice" class="choice choice2">Q4 WRONG</li>
+                <li id="choice" class="choice choice3">Q4 WRONG</li>
+                <li id="choice" class="choice choice4">Q4 WRONG</li>
             </ol>
             <ol id="question5">
-                <li class="choice choice1">Q5 CHOICE</li>
-                <li class="choice choice2">Q5 CHOICE</li>
-                <li class="choice choice3">Q5 CHOICE</li>
-                <li class="choice choice4">Q5 CHOICE</li>
+                <li id="choice" class="choice choice1">Q5 WRONG</li>
+                <li id="choice" class="choice choice2">Q5 WRONG</li>
+                <li id="choice" class="choice choice3">Q5 RIGHT</li>
+                <li id="choice" class="choice choice4">Q5 WRONG</li>
             </ol>
             <ol id="score">
                 <li class="answer answer1">ANSWER1</li>
