working on looping through array

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         <h1 id="question">LET'S TAKE A QUIZ!</h1>
             <button onclick="startTimer(10)" id="startButton"class="start">START</button>
             <section id="content">
-            <ol id="question1">
+                <ol id="questions">
+                    <li id="choice" class="choice choice1"></li>
+                    <li id="choice" class="choice choice2"></li>
+                    <li id="choice" class="choice choice3"></li>
+                    <li id="choice" class="choice choice4"></li>
+                </ol>
+            <!-- <ol id="question1">
                 <li id="choice" class="choice choice1">Q1 WRONG</li>
                 <li id="choice" class="choice choice2">Q1 WRONG</li>
                 <li id="choice" class="choice choice3">Q1 RIGHT</li>
@@ -54,7 +60,7 @@
                 <li class="answer answer3">ANSWER3</li>
                 <li class="answer answer4">ANSWER4</li>
                 <li class="answer answer5">ANSWER5</li>
-            </ol>
+            </ol> -->
             <section class="validation">
                 <p>VALIDATION</p>
             </section>
