got answers pushing when clicked

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <button onclick="startTimer(10)" id="startButton"class="start">START</button>
             <section id="content">
                 <ol id="questions">
-                    <li id="choice" class="choice choice1"></li>
-                    <li id="choice" class="choice choice2"></li>
-                    <li id="choice" class="choice choice3"></li>
-                    <li id="choice" class="choice choice4"></li>
+                    <li id="choice1" class="choice choice1">CHOICE1</li>
+                    <li id="choice2" class="choice choice2">CHOICE2</li>
+                    <li id="choice3" class="choice choice3">CHOICE3</li>
+                    <li id="choice4" class="choice choice4">CHOICE4</li>
                 </ol>
             <!-- <ol id="question1">
                 <li id="choice" class="choice choice1">Q1 WRONG</li>
