got q1 answers1 showing on click

--- a/index.html
+++ b/index.html
@@ -15,52 +15,15 @@
         </ul>
     </nav>
     <main class="main">
-        <h1 id="question">LET'S TAKE A QUIZ!</h1>
+        <h1 id="questionTitle">LET'S TAKE A QUIZ!</h1>
             <button onclick="startTimer(10)" id="startButton"class="start">START</button>
             <section id="content">
-                <ol id="questions">
+                <ol id="questionContainer">
                     <li id="choice1" class="choice choice1">CHOICE1</li>
                     <li id="choice2" class="choice choice2">CHOICE2</li>
                     <li id="choice3" class="choice choice3">CHOICE3</li>
                     <li id="choice4" class="choice choice4">CHOICE4</li>
                 </ol>
-            <!-- <ol id="question1">
-                <li id="choice" class="choice choice1">Q1 WRONG</li>
-                <li id="choice" class="choice choice2">Q1 WRONG</li>
-                <li id="choice" class="choice choice3">Q1 RIGHT</li>
-                <li id="choice" class="choice choice4">Q1 WRONG</li>
-            </ol>
-            <ol id="question2">
-                <li id="choice" class="choice choice1">Q2 WRONG</li>
-                <li id="choice" class="choice choice2">Q2 RIGHT</li>
-                <li id="choice" class="choice choice3">Q2 WRONG</li>
-                <li id="choice" class="choice choice4">Q2 WRONG</li>
-            </ol>
-            <ol id="question3">
-                <li id="choice" class="choice choice1">Q3 WRONG</li>
-                <li id="choice" class="choice choice2">Q3 WRONG</li>
-                <li id="choice" class="choice choice3">Q3 WRONG</li>
-                <li id="choice" class="choice choice4">Q3 RIGHT</li>
-            </ol>
-            <ol id="question4">
-                <li id="choice" class="choice choice1">Q4 RIGHT</li>
-                <li id="choice" class="choice choice2">Q4 WRONG</li>
-                <li id="choice" class="choice choice3">Q4 WRONG</li>
-                <li id="choice" class="choice choice4">Q4 WRONG</li>
-            </ol>
-            <ol id="question5">
-                <li id="choice" class="choice choice1">Q5 WRONG</li>
-                <li id="choice" class="choice choice2">Q5 WRONG</li>
-                <li id="choice" class="choice choice3">Q5 RIGHT</li>
-                <li id="choice" class="choice choice4">Q5 WRONG</li>
-            </ol>
-            <ol id="score">
-                <li class="answer answer1">ANSWER1</li>
-                <li class="answer answer2">ANSWER2</li>
-                <li class="answer answer3">ANSWER3</li>
-                <li class="answer answer4">ANSWER4</li>
-                <li class="answer answer5">ANSWER5</li>
-            </ol> -->
             <section class="validation">
                 <p>VALIDATION</p>
             </section>
