getting answers back in dynamically

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </nav>
     <main class="main">
         <h1 id="questionTitle">LET'S TAKE A QUIZ!</h1>
-            <button onclick="startTimer(10)" id="startButton"class="start">START</button>
+            <button id="startButton" class="start">START</button>
             <section id="content">
                 <ol id="questionContainer">
-                    <li id="choice1" class="choice choice1">CHOICE1</li>
+                    <!-- <li id="choice1" class="choice choice1">CHOICE1</li>
                     <li id="choice2" class="choice choice2">CHOICE2</li>
                     <li id="choice3" class="choice choice3">CHOICE3</li>
-                    <li id="choice4" class="choice choice4">CHOICE4</li>
+                    <li id="choice4" class="choice choice4">CHOICE4</li> -->
                 </ol>
             <section class="validation">
                 <p>VALIDATION</p>
