--- a/index.html
+++ b/index.html
@@ -18,15 +18,8 @@
         <h1 id="questionTitle">LET'S TAKE A QUIZ!</h1>
             <button id="startButton" class="start">START</button>
             <section id="content">
-                <ol id="questionContainer">
-                    <!-- <li id="choice1" class="choice choice1">CHOICE1</li>
-                    <li id="choice2" class="choice choice2">CHOICE2</li>
-                    <li id="choice3" class="choice choice3">CHOICE3</li>
-                    <li id="choice4" class="choice choice4">CHOICE4</li> -->
-                </ol>
-            <section class="validation">
-                <p>VALIDATION</p>
-            </section>
+                <ol id="questionContainer"></ol>
+            <section id="validation" class="validation"></section>
         </section>
     </main>
     <script src="script.js"></script>
