storing high score

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav id="nav" class="nav">
         <ul>
-            <li class="nav-item">Top Scores</li>
+            <li class="nav-item">High Score: <span id="hgih-score">0</span></li>
             <li class="nav-item">Time Remaining: <span id="time-remaining">0</span></li>
         </ul>
     </nav>
