--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <nav id="nav" class="nav">
         <ul>
-            <li class="nav-item">High Score: <span id="hgih-score">0</span></li>
-            <li class="nav-item">Time Remaining: <span id="time-remaining">0</span></li>
+            <li class="nav-item"><strong>High Score: </strong><span id="high-score">--</span></li>
+            <li class="nav-item"><strong>Time Remaining: </strong></strong><span id="time-remaining">--</span></li>
         </ul>
     </nav>
     <main class="main">
-        <h1 id="questionTitle">LET'S TAKE A QUIZ!</h1>
+        <h1 id="questionTitle">PRESS START TO BEGIN QUIZ</h1>
             <button id="startButton" class="start">START</button>
             <section id="content">
                 <ol id="questionContainer"></ol>
