added reload to reTryQuiz

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main class="main">
         <h1 id="questionTitle">PRESS START TO BEGIN QUIZ</h1>
             <button id="startButton" class="start">START</button>
+            <button id="reTryButton" class="retry">TRY AGAIN</button>
             <section id="content">
                 <ol id="questionContainer"></ol>
             <section id="validation" class="validation"></section>
