--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </nav>
     <main class="main">
         <h1 id="questionTitle">PRESS START TO BEGIN QUIZ</h1>
+        <p id="rules">You'll have 30 seconds to answer 5 questions. If you answer incorrectly, 5 seconds will be deducted from your time. Good luck!</p>
             <button id="startButton" class="start">START</button>
             <button id="reTryButton" class="retry">TRY AGAIN</button>
             <section id="content">
